force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>Employee</label>
    <nameField>
        <displayFormat>E-{0}</displayFormat>
        <label>Emp ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>