force-app/main/default/objects/Employee__c/fields/designation__c.field-meta.xml
<CustomField>
    <fullName>designation__c</fullName>
    <label>designation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Experience_Level__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Jr Developer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Sr Developer</fullName>
            </value>
            <value>
                <fullName>Asst Manager</fullName>
            </value>
            <value>
                <fullName>Manger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>