force-app/main/default/objects/Employee__c/fields/Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Experience_Level__c</fullName>
    <label>Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-2</fullName>
            </value>
            <value>
                <fullName>2-4</fullName>
            </value>
            <value>
                <fullName>4-6</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>