force-app/main/default/objects/Employee__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>IF(ISPICKVAL( Gender__c , &apos;Male&apos;) , &apos;Mr.&apos;, &apos;Ms.&apos;)  &amp;  Last_Name__c  &amp; &apos; &apos;  &amp;  First_Name__c</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>