force-app/main/default/objects/Employee__c/fields/savings__c.field-meta.xml
<CustomField>
    <fullName>savings__c</fullName>
    <description>Field created for task given by hari krishna on 18-10-2021</description>
    <label>savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>